@@ -1,3 +1,8 @@
+2009-02-27 10:32-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* PBMakefileGenerator.m: add scripts to before-all::
+	* PBPbxNativeTarget.[hm]: Changes to store script information.
+
 2009-02-26 23:40-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* main.m: Cleanup
